[gd_scene load_steps=5 format=3 uid="uid://dmvsxm8femdni"]

[ext_resource type="Script" uid="uid://cgngf8t8tkw5l" path="res://src/scenes/UI/GameUI/PassTime/PassTimeUI.gd" id="1_0dbyp"]

[sub_resource type="Curve" id="Curve_0dbyp"]
_limits = [0.0, 1.0, 0.0, 4.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.751825, 0.646341), -0.956945, -0.956945, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_61ysk"]
curve = SubResource("Curve_0dbyp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3cxyc"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(120, 0, 1)
angle_min = 45.0
angle_max = 45.0
direction = Vector3(0, 1, 0)
spread = 120.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, 120, 0)
scale_max = 4.0
scale_curve = SubResource("CurveTexture_61ysk")
color = Color(0.6, 0.0588235, 0.294118, 1)
hue_variation_min = -0.01
hue_variation_max = 0.00999998

[node name="PassTimeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_0dbyp")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -24.0
offset_right = 99.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
text = "Advance Cycle..."

[node name="GPUParticles2D" type="GPUParticles2D" parent="Button"]
unique_name_in_owner = true
process_mode = 3
show_behind_parent = true
position = Vector2(125, 47)
amount = 20
process_material = SubResource("ParticleProcessMaterial_3cxyc")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
